# pdp7_timetracker

./: .gitignore  .travis.yml  README  pyproject.toml  schema.sql
pdp7_timetracker/: __init__.py  cmd.py  now.py  sql.py
tests/: conftest.py  test_base.py
