[tool.poetry]
name = "pdp7_timetracker"
version = "0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = ">=3.6"
ipython = "^7.9"
appdirs = "^1.4"
psycopg2 = "^2.8"
tabulate = "^0.8.5"

[tool.poetry.scripts]
titr = 'pdp7_timetracker.cmd:main'


[tool.poetry.dev-dependencies]
flake8 = "*"
black = { version = "*", allows-prereleases = true }
flake8-black = "^0.1.1"
pytest = "^5.2"
testcontainers = { version = "^2.5", extras = ['postgresql'] }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
