[tool.poetry]
name = "pdp7_timetracker"
version = "0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
ipython = "^7.12"    # for titr's interactive shell
appdirs = "^1.4"    # to locate the config file
psycopg2 = "^2.8"   # to connect to Postgres
tabulate = "^0.8.6" # to display pretty results in the interactive shell
testcontainers = { version = "^2.5", extras = ['postgresql'] }
                    # to use an "embedded" Docker database

[tool.poetry.scripts]
titr = 'pdp7_timetracker.cmd:main'

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
flake8-black = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
